# pre-commit-demo

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: constant.py  main.py  malformed.json  ugly.json
