[tool.poetry]
name = "pre-commit-demo"
version = "0.1.0"
description = "A pre-commit Demo"
authors = ["Jean-Loup MONNIER <jean-loup.monnier@spikeelabs.fr>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.0"
insecure-package = "^0.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
